# agentomics

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yml  deploy-book.yml  publish-book.yml  python-package-conda.yml
agentomics/: __init__.py
agentomics/agents/: big_bank.py  central_bank.py  economy_agent_llm.py  small_bank.py
agentomics/common/: data_structures.py  types.py
agentomics/tools/: big_bank_knobs.py  central_bank_knobs.py  econ_vars_tool.py  small_bank_knobs.py
agentomics/utils/: fred_download.py  fred_post_processing.py  logging.py
docs/: _config.yml  _toc.yml  agentomics.md  agentomics_blog.md  api.rst  architecture.puml  conclusions.md  evaluate_multi_agent_system.ipynb  intro.md  methods.md  notebook_output.csv  notebook_output_gpt_4o_mini.csv  percolate_deltas.ipynb  percolate_deltas_control_output.csv  percolate_deltas_exp_output.csv  research_writeup.md  research_writeup_outline.md
docs/.ipynb_checkpoints/: evaluate_multi_agent_system-checkpoint.ipynb
docs/_static/: custom.css
docs/api/agentomics/: index.html  index.md
docs/api/agentomics/agents/: big_bank.html  big_bank.md  central_bank.html  central_bank.md  economy_agent_llm.html  economy_agent_llm.md  index.html  index.md  small_bank.html  small_bank.md
docs/api/agentomics/common/: data_structures.html  data_structures.md  index.html  index.md  types.html  types.md
docs/api/agentomics/tools/: big_bank_knobs.html  big_bank_knobs.md  central_bank_knobs.html  central_bank_knobs.md  econ_vars_tool.html  econ_vars_tool.md  index.html  index.md  small_bank_knobs.html  small_bank_knobs.md
docs/results/: results.md
docs/scenarios/: proposal_main.md
docs/scenarios/banks/: central_commercial_banks.md
logs/: Orchestrator.tsv  QuestionGenerator.tsv  Student.tsv
notebooks/: _config.yml  _toc.yml  intro.md
notebooks/progress/: meeting_notes.md
notebooks/progress/meetings/: 20240919.md
output/: notebook_output.csv  three_banks_output.csv
scripts/economic_simulations/: three_banks.py
scripts/langroid_setup/: three_agent_banks.py
src/economic-simulations/: three_agent_banks.py
src/economic_simulations/: three_banks.py
src/langroid_setup/: two_agent_chat.py
src/utils/: models.py
tests/: conftest.py
tests/agents/: test_big_bank.py  test_central_bank.py  test_economy_agent.py  test_small_bank.py
tests/langroid-setup/: test_two_agent_chat.py
tests/scripts/: test_three_banks.py
tests/utils/: test_fred_download.py  test_fred_post_processing.py
