[tool.poetry]
name = "ai-ml-template"
version = "0.1.0"
description = ""
authors = ["Akhil Karra <akhil.karra@me.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11.5, <3.13"
numpy = "^2.0.0"
scipy = "^1.11.4"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
matplotlib = "^3.8.2"
langroid = "^0.13.0"
mlx-lm = "^0.18.1"
sentence-transformers = "^3.0.1"
ruff = "^0.6.3"
mypy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.6.0"
pdoc3 = "^0.11.0"
dvc = "^3.38.1"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
   ".bzr",
   ".direnv",
   ".eggs",
   ".git",
   ".git-rewrite",
   ".hg",
   ".mypy_cache",
   ".nox",
   ".pants.d",
   ".pytype",
   ".ruff_cache",
   ".svn",
   ".tox",
   ".venv",
   "__pypackages__",
   "_build",
   "buck-out",
   "build",
   "dist",
   "node_modules",
   "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10
