[project]
name = "agentomics"
version = "0.1.0"
description = ""
authors = [{ name = "Akhil Karra", email = "akhil.karra@me.com" }]
readme = "README.md"
requires-python = ">=3.11.5, <3.13"
dependencies = [
    "numpy~=1.26.3",
    "pandas==2.1.4",
    "langroid==0.23.3",
    "ruff==0.6.3",
    "mypy==1.12.0",
    "pytest-mock==3.14.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "jupyter==1.0.0",
    "pre-commit==3.6.0",
    "pdoc3==0.11.0",
    "dvc==3.38.1",
    "jupyter-book==0.15.1",
    "ghp-import==2.1.0",
    "pytest-cov==6.0.0",
]
test = [
    "pytest==8.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
lint.ignore = ["E501"]
lint.select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
   ".bzr",
   ".direnv",
   ".eggs",
   ".git",
   ".git-rewrite",
   ".hg",
   ".mypy_cache",
   ".nox",
   ".pants.d",
   ".pytype",
   ".ruff_cache",
   ".svn",
   ".tox",
   ".venv",
   "__pypackages__",
   "_build",
   "buck-out",
   "build",
   "dist",
   "node_modules",
   "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 10
